# ProfitPilot

./: .gitignore  Dockerfile  EXAMPLE_USAGE.py  README.md  app.py  csv processor.txt  docker-compose.yml  example.ipynb  example.py  llama  llama.py  paragraphs.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: .gitignore  README.bako.md  main.py  requirements.txt  server.py
backend/email_drafter/: __init__.py
backend/src/: embeddings.py  loaders.py  vectorstore.py
backend/tests/: test_embeddings.py  test_loaders.py
backend/vectordb/: embeddings.py  loaders.py  retrivers.py  selector.py  splitters.py  vectorstore.py
docs/PUT_GOOGLE_CREDS_HERE/: CLIENT_SECRET.json  SERVICE_AGENT.json
docs/collected_data/: contact_info.txt  html_content.html  integrations.txt  paragraphs.txt  platform_information.txt  results.txt  urls.txt
email_drafter/: email_generator.py  gmail.py  marketing_report.py  message_templates.py
pages/: first_page.py
profit/: __init__.py  agent.py  clarifi.py  clarifi_agent.py  first_page.py  llama.py  llama2.py  llamachat.py  main.py  tools.py
profit/email_drafter/: __init__.py  email_generator.py  gmail.py  url_parse.py
profit/webscraper/: parse_data.py  scraper.py
profitpilot/: __init__.py  main.py
tests/: test_embeddings.py  test_loaders.py  test_retrievers.py  test_selector.py  test_splitters.py  test_vectorstore.py
vectordb/: __init__.py  embeddings.py  loaders.py  retrivers.py  selector.py  splitters.py  vectorstore.py
webscraper/: html_content.html  main.py  paragraphs.txt  parse_contact_info.py  parse_data.py  parse_html.py  result.json  setup.bat  taimi_information.txt  urls.json
